--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "cra-template": "1.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
