--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "cra-template": "1.2.0",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
-    "react-scripts": "^5.0.1",
-    "cra-template": "1.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.1.0"
   }
 }
